--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
       $(window).scroll(function () {
         var scroll = $(window).scrollTop();
         if (scroll > 300) {
-          $("#navbarScroll").css("background", "black");
+          $("#navbarScroll").css("background", "#001833");
         }
 
         else {
